--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	<name>Hello World Web Application Repository</name>
 	<description>Simplest possible Java Webapp</description>
 	<properties>
- 		 <sonar.projectKey>cndacademy_hello-world-war</sonar.projectKey>
- 		 <sonar.organization>cndacademy</sonar.organization>
- 		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
- 		 <sonar.login>0829daee34fb2c86607d80c7cf0621f537bdc19c</sonar.login>
+ 		 <sonar.projectKey>rajputravisingh_Sample-Maven-App</sonar.projectKey>
+                 <sonar.organization>rajputravisingh</sonar.organization>
+                 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                 <sonar.login>78ff1ee1286982cf46ecc7740be983c85f666d42</sonar.login>
 	</properties>
 
 	<build>
